--- a/public/style.css
+++ b/public/style.css
@@ -1,9 +1,29 @@
+:root {
+    --background-dark: #2d3548;
+    --text-light: rgba(255, 255, 255, 0.6);
+    --text-lighter: rgba(255, 255, 255, 0.9);
+    --spacing-s: 8px;
+    --spacing-m: 16px;
+    --spacing-l: 24px;
+    --spacing-xl: 32px;
+    --spacing-xxl: 64px;
+    --width-container: 1200px;
+}
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Rubik:wght@300&display=swap');
 
 body {
     text-align: center;
-    background-color: #a4d5f7;
+    background-color: #9C97FF;
 }
+
+
+html {
+    height: 100%;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 14px;
+}
+
 
 #text {
     font-family: 'Poppins', sans-serif;
@@ -50,7 +70,7 @@ header {
     font-family: "Rubik", sans-serif;
     font-weight: 1000;
     font-size: 20px;
-    color: #edf0f1;
+    color: #004cf1;
     text-decoration: none;
 }
 
@@ -99,7 +119,7 @@ header {
     top: 0;
     background-color: #24252a;
     overflow-x: hidden;
-    transition: width 0.5s ease 0s;
+    transition: all 0.5s ease 0s;
 }
 
 .overlay--active {
@@ -118,7 +138,7 @@ header {
     padding: 15px;
     font-size: 36px;
     display: block;
-    transition: color 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
 }
 
 .overlay a:hover,
@@ -132,6 +152,7 @@ header {
     right: 45px;
     font-size: 60px;
     color: #edf0f1;
+    cursor: pointer;
 }
 
 @media screen and (max-height: 450px) {
@@ -158,7 +179,7 @@ header {
     }
 }
 
-.cssbuttons-io-button {
+.cta {
     background: rgb(51, 201, 10);
     color: white;
     font-family: 'Rubik' sans-serif;
@@ -183,7 +204,7 @@ header {
     padding-right: 3.3em;
 }
 
-.cssbuttons-io-button .icon {
+.cta .icon {
     background: white;
     margin-left: 1em;
     position: absolute;
@@ -206,12 +227,12 @@ header {
     transition: all 0.3s;
 }
 
-.cssbuttons-io-button:hover .icon {
+.cta:hover .icon {
     width: calc(100% - 0.6em);
 
 }
 
-.cssbuttons-io-button .icon svg {
+.cta .icon svg {
     width: 1.1em;
     -webkit-transition: -webkit-transform 0.3s;
     transition: -webkit-transform 0.3s;
@@ -220,14 +241,110 @@ header {
     color: rgb(51, 201, 10);
 }
 
-.cssbuttons-io-button:hover .icon svg {
+.cta:hover .icon svg {
     -webkit-transform: translateX(0.1em);
     -ms-transform: translateX(0.1em);
     transform: translateX(0.1em);
 }
 
-.cssbuttons-io-button:active .icon {
+.cta:active .icon {
     -webkit-transform: scale(0.95);
     -ms-transform: scale(0.95);
     transform: scale(0.95);
+}
+
+#video {
+
+    height: 100%;
+    width: 100%;
+    background-color: #9C97FF;
+}
+
+
+.hero-section {
+    align-items: flex-start;
+    display: flex;
+    min-height: 100%;
+    justify-content: center;
+    padding: var(--spacing-xxl) var(--spacing-l);
+}
+
+.card-grid {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-column-gap: var(--spacing-l);
+    grid-row-gap: var(--spacing-l);
+    max-width: var(--width-container);
+    width: 100%;
+}
+
+@media(min-width: 540px) {
+    .card-grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media(min-width: 960px) {
+    .card-grid {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+
+.card {
+    list-style: none;
+    position: relative;
+}
+
+.card:before {
+    content: '';
+    display: block;
+    padding-bottom: 150%;
+    width: 100%;
+}
+
+.card__background {
+    background-size: cover;
+    background-position: center;
+    border-radius: var(--spacing-l);
+    bottom: 0;
+    filter: brightness(0.75) saturate(1.2) contrast(0.85);
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    transform-origin: center;
+    trsnsform: scale(1) translateZ(0);
+    transition:
+        filter 200ms linear,
+        transform 200ms linear;
+}
+
+.card:hover .card__background {
+    transform: scale(1.05) translateZ(0);
+}
+
+.card-grid:hover>.card:not(:hover) .card__background {
+    filter: brightness(0.5) saturate(0) contrast(1.2) blur(20px);
+}
+
+.card__content {
+    left: 0;
+    padding: var(--spacing-l);
+    position: absolute;
+    top: 0;
+}
+
+.card__category {
+    color: var(--text-light);
+    font-size: 0.9rem;
+    margin-bottom: var(--spacing-s);
+    text-transform: uppercase;
+}
+
+.card__heading {
+    color: var(--text-lighter);
+    font-size: 1.9rem;
+    text-shadow: 2px 2px 20px rgba(0, 0, 0, 0.2);
+    line-height: 1.4;
+    word-spacing: 100vw;
 }
