--- a/public/style.css
+++ b/public/style.css
@@ -7,7 +7,7 @@
     --spacing-l: 24px;
     --spacing-xl: 32px;
     --spacing-xxl: 64px;
-    --width-container: 1200px;
+    --width-container: 85%;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Rubik:wght@300&display=swap');
@@ -267,6 +267,7 @@ header {
     min-height: 100%;
     justify-content: center;
     padding: var(--spacing-xxl) var(--spacing-l);
+
 }
 
 .card-grid {
@@ -286,7 +287,7 @@ header {
 
 @media(min-width: 960px) {
     .card-grid {
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(5, 1fr);
     }
 }
 
