--- a/public/style.css
+++ b/public/style.css
@@ -7,7 +7,7 @@
     --spacing-l: 24px;
     --spacing-xl: 32px;
     --spacing-xxl: 64px;
-    --width-container: 85%;
+    --width-container: 100%;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Rubik:wght@300&display=swap');
@@ -314,7 +314,7 @@ header {
     right: 0;
     top: 0;
     transform-origin: center;
-    trsnsform: scale(1) translateZ(0);
+    transform: scale(1) translateZ(0);
     transition:
         filter 200ms linear,
         transform 200ms linear;
